[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "removebgvideo"
version = "0.1.0"
description = "Official Python SDK for RemoveBGVideo Public API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "RemoveBGVideo" }]
dependencies = [
  "requests>=2.31.0"
]
keywords = ["removebgvideo", "video background removal", "sdk", "api"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Multimedia :: Video",
]

[project.urls]
Homepage = "https://removebgvideo.com"
Documentation = "https://removebgvideo.com/docs"
Repository = "https://github.com/JsonChao/removebgvideo-python"

[tool.setuptools]
packages = ["removebgvideo"]
